tests/characterization/snapshots/characterization__command_help__backend.snap
---
source: tests/characterization/main.rs
expression: "context.run(args, 0)"
---
exit: 0
--- stdout ---
Usage:
  oqtopus backend <command> [args]

Commands:
  install         Install backend component releases.
  build           Build backend runtime artifacts.
  versions        List available component versions.
  uninstall       Remove an installed release.
  update          Install the latest release of a component.
  start           Start a managed service.
  stop            Stop a managed service.
  restart         Restart a managed service.
  status          Show process status.
  device-status   Show or update gateway device status.
  info            Show backend environment information.
  help            Show help.
--- stderr ---
--- end ---
