tests/characterization/snapshots/characterization__command_help__backend_build.snap
---
source: tests/characterization/main.rs
expression: "&help_output"
---
exit: 0
--- stdout ---
Usage:
  oqtopus backend build sse-runtime
--- stderr ---
--- end ---
