tests/characterization/snapshots/characterization__command_help__backend_device_status.snap
---
source: tests/characterization/main.rs
expression: "&help_output"
---
exit: 0
--- stdout ---
Usage:
  oqtopus backend device-status <show|active|inactive|maintenance>
--- stderr ---
--- end ---
