tests/characterization/snapshots/characterization__command_help__backend_install.snap
---
source: tests/characterization/main.rs
expression: "&help_output"
---
exit: 0
--- stdout ---
Usage:
  oqtopus backend install <engine|tranqu|gateway> [version|branch:<branch>] [--skip-sse-build]
  oqtopus backend install all [--skip-sse-build]
--- stderr ---
--- end ---
