tests/characterization/snapshots/characterization__command_help__backend_restart.snap
---
source: tests/characterization/main.rs
expression: "&help_output"
---
exit: 0
--- stdout ---
Usage:
  oqtopus backend restart <core|sse_engine|mitigator|estimator|combiner|tranqu|gateway|all>
--- stderr ---
--- end ---
