tests/characterization/snapshots/characterization__command_help__backend_start.snap
---
source: tests/characterization/main.rs
expression: "&help_output"
---
exit: 0
--- stdout ---
Usage:
  oqtopus backend start <core|sse_engine|mitigator|estimator|combiner|tranqu|gateway|all>
  oqtopus backend start <core|sse_engine|mitigator|estimator|combiner|tranqu|gateway> --foreground
--- stderr ---
--- end ---
