tests/characterization/snapshots/characterization__command_help__backend_uninstall.snap
---
source: tests/characterization/main.rs
expression: "&help_output"
---
exit: 0
--- stdout ---
Usage:
  oqtopus backend uninstall <engine|tranqu|gateway> <version>
  oqtopus backend uninstall <engine|tranqu|gateway> branch:<branch>
--- stderr ---
--- end ---
