tests/characterization/snapshots/characterization__command_help__backend_update.snap
---
source: tests/characterization/main.rs
expression: "&help_output"
---
exit: 0
--- stdout ---
Usage:
  oqtopus backend update <engine|tranqu|gateway>
--- stderr ---
--- end ---
