tests/characterization/snapshots/characterization__command_help__backend_versions.snap
---
source: tests/characterization/main.rs
expression: "&help_output"
---
exit: 0
--- stdout ---
Usage:
  oqtopus backend versions <engine|tranqu|gateway>
--- stderr ---
--- end ---
