tests/characterization/snapshots/characterization__command_help__cloud_local.snap
---
source: tests/characterization/main.rs
expression: "context.run(args, 0)"
---
exit: 0
--- stdout ---
Usage:
  oqtopus cloud-local <command> [args]

Commands:
  install         Install cloud-local component releases.
  versions        List available component versions.
  uninstall       Remove an installed release.
  update          Install the latest release of a component.
  start           Start a managed service.
  stop            Stop a managed service.
  restart         Restart a managed service.
  status          Show process status.
  info            Show environment metadata.
  help            Show this help.
--- stderr ---
