tests/characterization/snapshots/characterization__command_help__cloud_local_install.snap
---
source: tests/characterization/main.rs
expression: "&help_output"
---
exit: 0
--- stdout ---
Usage:
  oqtopus cloud-local install <cloud|frontend|admin> [version|branch:<branch>]
  oqtopus cloud-local install all
--- stderr ---
--- end ---
